# helmdeck

./: .dockerignore  .gitignore  .gitleaks.toml  .golangci.yml  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.mod  go.sum  vercel.json
.githooks/: pre-push
.github/: dependabot.yml
.mcp/: server.json
contrib/helmdeck-environment/: README.md  pyproject.toml
contrib/helmdeck-environment/src/helmdeck_environment/: __init__.py  environment.py
contrib/helmdeck-environment/tests/: test_environment.py
deploy/: openclaw-baas-net.compose.yml
docs/: MILESTONES.md  PACKS.md  RELEASES.md  SECURITY-HARDENING.md  SIDECAR-EXTENDING.md  SIDECAR-LANGUAGES.md  TASKS.md  sitemap.xml
models/: google-gemma-4-26b-a4b-it-free.yaml  huggingface-openai-gpt-oss-120b.yaml  meta-llama-llama-3.3-70b-instruct-free.yaml  nvidia-nemotron-3-super-120b-a12b-free.yaml  openai-gpt-oss-120b-free.yaml  qwen-qwen3-coder-free.yaml  z-ai-glm-4.5-air-free.yaml
npm/: README.md  package.json
scripts/: VALIDATION.md  av-validate.sh  calibrate-model.sh  calibrate-model.test.sh  clients-smoke.sh  configure-claude.sh  configure-openclaw.sh  coverage-gate.sh  hyperframes-bare-baseline.sh  hyperframes-init.sh  install.sh  openclaw-register-qmd.sh  pipelines-smoke.sh  publish-to-mcp-registry.sh  smoke-integration.sh  smoke-memory-bridge.sh  smoke.sh  validate-model-profiles.py  validate-openclaw.sh  validate-phase-6-5.sh  vnc-forward.sh
web/: .gitignore  embed.go  index.html  package-lock.json  package.json  postcss.config.js  (+1 more)
(+670 files in other folders)
